# RM-final_task

task2_1/: task2_1.py
task2_2_vediorec/: CMakeLists.txt
task2_2_vediorec/src/: task2_2.cpp
